@startuml
' Post List Component

    class PostListActivity {
        # <<void>> onCreate(Bundle savedInstanceState)
    }

    class PostListFragment {
        - mCreatePostButton: Button
        - mPostRecyclerView: RecyclerView
        - mAdapter: PostAdapter
        + <<void>> onCreateOptionsMenu(Menu menu, MenuInflater inflater)
        + <<void>> onCreate(Bundle savedInstanceState)
        + <<void>> onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState)
        + <<void>> onResume()
        - <<void>> updateUI()
    }

    class PostHolder {
        + mTitleTextView: TextView
        + mPreviewTextView: TextView
        + Post mPost
        + PostHolder(View itemView)
        + <<void>> bindPost(Post post)
    }

    class PostAdapter {
        - mPosts: List<Post>
        + PostAdapter(List<Post> posts)
        + <<void>> setCrimes(List<Post> posts)
        + <<PostHolder>> onCreateViewHolder(ViewGroup parent, int viewType)
        + <<void>> onBindViewHolder(PostHolder holder, int position)
        + <<int>> getItemCount()
    }

    class SearchHandler {
        + getResults(String query, List<Crime> crimes)
    }

    namespace ShareComponent {
        class Sharer
    }

    class Post {
        - mId: UUID
        - mTitle: String
        - mContent: String
        - mUri: Uri
        + <<UUID>> getId()
        + <<void>> setId(UUID id)
        + <<String>> getTitle()
        + <<void>> setTitle(String title)
        + <<String>> getContent()
        + <<void>> setContent(String content)
        + <<String>> getPhotoFileName()
        + <<Uri>> getUri()
        + <<void>> setUri(Uri uri)
    }

    PostListActivity --> PostListFragment
    PostListFragment --> SearchHandler
    PostListFragment *-- PostHolder : "contains"
    PostListFragment *-- PostAdapter : "contains"
    PostHolder o-- Post
    PostListFragment --> Sharer
@enduml
